file is handed,single file and multile file  and verifing the password for backend to user and saving the password in backend and bcrypt is install and nodemailer is install jsonwebtoken and multer is instal form multiple file handing // jsonwebtoken is use to geneterate the token and we send email to user the user/e
