# src/controller/student.controller.ts
@@ -4,25 +4,16 @@ import { Student } from '../entity/student'
 import { json } from 'stream/consumers'
 import { AppError } from '../utils/AppError'
 import { error } from 'console'
+import { put } from "@vercel/blob";
+import SendMail from '../utils/mail'
+import HTML_template from '../view/mailtemplate'
+import { send } from 'process'
 
 const StudentRepo =AppDataSource.getRepository(Student)
 // #swagger.tags=['Student']
 export const getdata=async (req:Request, res:Response, next:NextFunction)=>{
     // #swagger.tags=['Student']
-    /* #swagger.requestBody = {
-                required:true,
-                content:{
-                    "multipart/form-data":{
-                        schema:{
-                                $ref:"#/components/schemas/studentSchema"
-                        }
-              
-
-                    }
-                }
-                
-            }
-        */
+   
     try{
         await StudentRepo.find().then(result=>{
             res.status(200).json({
@@ -59,12 +50,26 @@ export const postdata=async (req:Request, res:Response, next:NextFunction)=>{
                 }
                 
             }
-        */
-    
-            
+        */       
     try{
-        console.log(req.body)
+
+const urls = await put(req.file.originalname,req.file.buffer, { access: 'public',token:"vercel_blob_rw_IL0cZNrkthPhPF4L_VsgB6bmHZoilN4ySKHc79ntBv1tEdq" });
+        console.log(req.body,req.files,urls)
+        req.body.profile=urls.url
+
         await StudentRepo.save(req.body).then(result=>{
+            const message = " hello world "
+            const option ={
+                from:"THANK YOU <ayush.khatri105@gmail.com> ",
+                to:"kandelbinod634@gmail.com",
+                subject:"greeting",
+                text:message,
+                html:HTML_template(message,'greeting')
+            }
+            SendMail(option,(info=>{
+                console.log("email sended")
+                return console.log("messageid",info.messageid)
+            }))
             res.status(200).json({
                 message:"student data has been post successfully",
                 data:result
@@ -77,6 +82,7 @@ export const postdata=async (req:Request, res:Response, next:NextFunction)=>{
         })
     }
         catch(error){
+            console.log(error)
             res.status(500).json({
                 message: "somthing went wrong",
                 error:error
@@ -86,20 +92,7 @@ export const postdata=async (req:Request, res:Response, next:NextFunction)=>{
 }
 export const getsingledata=async (req:Request, res:Response, next:NextFunction)=>{
     // #swagger.tags=['Student']
-    /* #swagger.requestBody = {
-                required:true,
-                content:{
-                    "multipart/form-data":{
-                        schema:{
-                                $ref:"#/components/schemas/studentSchema"
-                        }
-              
-
-                    }
-                }
-                
-            }
-        */
+  
     try{
         console.log(req.params)
         await StudentRepo.findOneBy({id:req.params.id}).then(result=>{
@@ -144,9 +137,9 @@ export const updatedata=async (req:Request, res:Response, next:NextFunction)=>{
             res.status(200).json({
                 message:"student data has been fetch successfully",
                 data:result
+            })
             }).catch(error=>{
                 next(new AppError(400,"eroror"))
-            })
         })
     }
         catch(error){
